@@ -42,8 +42,6 @@ import java.awt.event.ActionEvent;
 import java.awt.event.KeyEvent;
 import java.io.File;
 import java.net.URL;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class OpenProjectAction extends AppAction {
@@ -55,13 +53,7 @@ public class OpenProjectAction extends AppAction {
     static {
         // Correspondence between project version and latest Modeler version that can upgrade it.
         // Modeler v4.1 can handle versions from 3.1 and 4.0 (including intermediate versions) modeler.
-        Map<String, String> map = new HashMap<>();
-        map.put("1.0", "v3.0");
-        map.put("1.1", "v3.0");
-        map.put("1.2", "v3.0");
-        map.put("2.0", "v3.0");
-        map.put("3.0.0.1", "v3.1");
-        PROJECT_TO_MODELER_VERSION = Collections.unmodifiableMap(map);
+        PROJECT_TO_MODELER_VERSION = Map.of("1.0", "v3.0", "1.1", "v3.0", "1.2", "v3.0", "2.0", "v3.0", "3.0.0.1", "v3.1");
     }
 
     public OpenProjectAction(Application application) {
@@ -124,11 +116,9 @@ public class OpenProjectAction extends AppAction {
     }
 
     /**
-     * Opens the specified project file. File must already exist. When
-     * {@code mcpHandshakeNonce} is non-null, the MCP-driven launch contract is honoured:
-     * on successful open, a handshake entry is written to {@link java.util.prefs.Preferences}
-     * so the MCP server's wait loop can confirm the project loaded. Pass {@code null}
-     * for normal user-driven opens.
+     * Opens the specified project file. File must already exist. When {@code mcpHandshakeNonce} is non-null, the
+     * MCP-driven launch contract is honored: on successful open, a handshake entry is written to Preferences so the
+     * MCP server's wait loop can confirm the project loaded. Pass {@code null} for normal user-driven opens.
      */
     public void openProject(File file, String mcpHandshakeNonce) {
         try {
@@ -179,7 +169,7 @@ public class OpenProjectAction extends AppAction {
                     break;
             }
 
-            openProjectResourse(rootSource, controller, mcpHandshakeNonce);
+            openProjectResource(rootSource, controller, mcpHandshakeNonce);
 
 
         } catch (Exception ex) {
@@ -188,7 +178,7 @@ public class OpenProjectAction extends AppAction {
         }
     }
 
-    private Project openProjectResourse(Resource resource, MainFrame controller, String mcpHandshakeNonce) {
+    private Project openProjectResource(Resource resource, MainFrame controller, String mcpHandshakeNonce) {
         Project project = app.getProjectLoader().loadProject(resource);
         controller.onProjectOpened(project, mcpHandshakeNonce);
         return project;
